hotfix select tela computadores

--- a/site/public/dashboard/html/computadorIndividual.html
+++ b/site/public/dashboard/html/computadorIndividual.html
@@ -45,23 +45,23 @@
             <div class="pc-info">
                 <div class="title">
                     <div class="contentTitle">
-                        <span class="text-geral" id="text-geral14">IDENTIFICADOR: PE34343433</span>
+                        <span class="text-geral" id="text-geral14">IDENTIFICADOR: #</span>
 
-                        <span class="text-geral" id="text-geral14">CPU: I5-10400F</span>
+                        <span class="text-geral" id="text-geral14">CPU: #</span>
                     </div>
 
 
                     <div class="contentTitle">
-                        <span class="text-geral" id="text-geral14">Setor: A</span>
+                        <span class="text-geral" id="text-geral14">Setor: #</span>
 
-                        <span class="text-geral" id="text-geral14">RAM: 8gb</span>
+                        <span class="text-geral" id="text-geral14">RAM: #</span>
                     </div>
 
 
                     <div class="contentTitle">
-                        <span class="text-geral" id="text-geral14">Tempo atividade: 01:09:23:20</span>
+                        <span class="text-geral" id="text-geral14">MAC: #</span>
 
-                        <span class="text-geral" id="text-geral14">TIPO DISCO: SSD</span>
+                        <span class="text-geral" id="text-geral14">TIPO DISCO: #</span>
                     </div>
 
                     <div class="contentTitleImg">
@@ -92,15 +92,15 @@
                         <div class="containerLegenda">
                             <h4>REDE:</h4>
                             <div class="boxLegenda">
-                                <p>> 90%</p>
+                                <p>> #%</p>
                                 <img src="../assets/dashboard/vermelho.png" alt="">
                             </div>
                             <div class="boxLegenda">
-                                <p>> 80%</p>
+                                <p>> #%</p>
                                 <img src="../assets/dashboard/amarelo.png" alt="">
                             </div>
                             <div class="boxLegenda">
-                                <p><= 80%</p>
+                                <p><= #%</p>
                                 <img src="../assets/dashboard/verde.png" alt="" id="verdeL">
                             </div>
                         </div>
@@ -110,15 +110,15 @@
                         <div class="containerLegenda">
                             <h4>RAM:</h4>
                             <div class="boxLegenda">
-                                <p>90%</p>
+                                <p>> #%</p>
                                 <img src="../assets/dashboard/vermelho.png" alt="">
                             </div>
                             <div class="boxLegenda">
-                                <p>80%</p>
+                                <p>> #%</p>
                                 <img src="../assets/dashboard/amarelo.png" alt="">
                             </div>
                             <div class="boxLegenda">
-                                <p><= 80%</p>
+                                <p><= #%</p>
                                 <img src="../assets/dashboard/verde.png" alt="" id="verdeL">
                             </div>
                         </div>
@@ -163,15 +163,15 @@
                         <div class="containerLegenda">
                             <h4>CPU:</h4>
                             <div class="boxLegenda">
-                                <p>> 90%</p>
+                                <p>> #%</p>
                                 <img src="../assets/dashboard/vermelho.png" alt="">
                             </div>
                             <div class="boxLegenda">
-                                <p>> 80%</p>
+                                <p>> #%</p>
                                 <img src="../assets/dashboard/amarelo.png" alt="">
                             </div>
                             <div class="boxLegenda">
-                                <p><= 80%</p>
+                                <p><= #%</p>
                                 <img src="../assets/dashboard/verde.png" alt="" id="verdeL">
                             </div>
                         </div>
@@ -181,15 +181,15 @@
                         <div class="containerLegenda">
                             <h4>DISCO:</h4>
                             <div class="boxLegenda">
-                                <p>> 90%</p>
+                                <p>> #%</p>
                                 <img src="../assets/dashboard/vermelho.png" alt="">
                             </div>
                             <div class="boxLegenda">
-                                <p>> 80%</p>
+                                <p>> #%</p>
                                 <img src="../assets/dashboard/amarelo.png" alt="">
                             </div>
                             <div class="boxLegenda">
-                                <p><= 80%</p>
+                                <p><= #%</p>
                                 <img src="../assets/dashboard/verde.png" alt="" id="verdeL">
                             </div>
                         </div>
