Trazendo quantidade de computador total e KPI de cpu

--- a/site/public/dashboard/html/analytics.html
+++ b/site/public/dashboard/html/analytics.html
@@ -78,7 +78,7 @@
                             </div>
 
                             <div class="kpiContentPorcen">
-                                <p>10%</p>
+                                <p id="respostaCPU">#</p>
                             </div>
                             <div class="kpiContentTime">
                                 <p>2 dias consecutivos</p>
