rotas do analytics prontas

--- a/site/public/dashboard/html/analytics.html
+++ b/site/public/dashboard/html/analytics.html
@@ -127,7 +127,7 @@
 
                 <div class="pieGrafic">
                     <div class="graficTitle">
-                        <h3>Porcentagem de tempo que as máquinas ficaram em cada status nos últimos 30 dias</h3>
+                        <h3>Porcentagem de máquinas em cada status nos últimos 30 dias</h3>
                     </div>
                     <div class="pieContainer">
                         <canvas id="pieChart"></canvas>
