tela computador individual finalizada

--- a/site/public/dashboard/html/computadorIndividual.html
+++ b/site/public/dashboard/html/computadorIndividual.html
@@ -84,7 +84,7 @@
                         </div>
 
                         <div class="fundoLegenda">
-                            <img src="../assets/dashboard/vermelho.png" alt="">
+                            <img id="alertaRede" src="" alt="">
                         </div>
                     </div>
 
@@ -127,7 +127,7 @@
                     <div class="boxLegendaGrafico2">
 
                         <div class="fundoLegenda2">
-                            <img src="../assets/dashboard/verde.png" alt="">
+                            <img id="alertaRam" src="" alt="">
                         </div>
                         <div class="graficBox">
                             <div class="titleChart2">
@@ -155,7 +155,7 @@
                         </div>
 
                         <div class="fundoLegenda">
-                            <img src="../assets/dashboard/verde.png" alt="">
+                            <img id="alertaCpu" src="" alt="">
                         </div>
                     </div>
 
@@ -198,7 +198,7 @@
                     <div class="boxLegendaGrafico2">
 
                         <div class="fundoLegenda2">
-                            <img src="../assets/dashboard/amarelo.png" alt="">
+                            <img id="alertaDisco" src="" alt="">
                         </div>
                         <div class="graficBox">
                             <div class="titleChart2">
