Algumas mudanças na tela de gerenciar

--- a/site/public/dashboard/html/computadores_gerenciar.html
+++ b/site/public/dashboard/html/computadores_gerenciar.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/computadoresGerenciar.css">
     <script src="https://kit.fontawesome.com/c06dcecf1f.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body onload="listarMaquina()">
     <section class="left-side-window" id="caixa1">
         <div class="side-nav">
             <a href="#" class="logo">
@@ -24,7 +24,6 @@
                 <div class="active"></div>
             </ul>
         </div>
-
     </section>
 
     <section class="right-side-window">
@@ -54,7 +53,7 @@
                                     <div class="info-item">TIPO ARMAZENAMENTO</div>
                                     <div class="info-item tools"></div>
                             </div>
-                            <div id="tabela-computadores">
+                            <div id="tabela-computadores" class="tabela-computadores">
                             </div>
 
                         </div>
