BOTAO DO SUPORTE FUNCIONANDO

--- a/site/public/dashboard/html/analytics.html
+++ b/site/public/dashboard/html/analytics.html
@@ -27,7 +27,9 @@
                 <li><a href="../../index.html"><i class="fa-solid fa-arrow-right-from-bracket"></i><p>Sair</p></a></li>
                 <div class="active"></div>
             </ul>
+            <li class="suporte"><a href="https://app.pipefy.com/public/form/VUNJN1lE"><i class = ""></i><p>Suporte</p></a></li>
         </div>
+        
 
     </section>
 
