--- a/site/public/dashboard/html/computadorIndividual.html
+++ b/site/public/dashboard/html/computadorIndividual.html
@@ -36,6 +36,7 @@
                     </a></li>
                 <div class="active"></div>
             </ul>
+            <li class="suporte"><a href="https://app.pipefy.com/public/form/VUNJN1lE"><i class = ""></i><p>Suporte</p></a></li>
         </div>
 
     </section>
