filtro tela de computadores pronto

--- a/site/public/dashboard/html/computadorIndividual.html
+++ b/site/public/dashboard/html/computadorIndividual.html
@@ -22,7 +22,7 @@
                 <li><a href="home.html"><i class="fa-solid fa-house-user"></i>
                         <p>Visão Geral</p>
                     </a></li>
-                <li><a href="computadores.html"><i class="fa-solid fa-desktop"></i>
+                <li><a href="computadores.html" id="paginaAtual"><i class="fa-solid fa-desktop"></i>
                         <p>Computadores</p>
                     </a></li>
                 <li><a href="usuarios.html"><i class="fa-solid fa-users"></i>
@@ -31,6 +31,9 @@
                 <li><a href="analytics.html"><i class="fa-sharp fa-solid fa-chart-column"></i>
                         <p>Analytics</p>
                     </a></li>
+                <li><a href="https://app.pipefy.com/public/form/VUNJN1lE"><i class="fa-sharp fa-solid fa-headset"></i>
+                    <p>Suporte</p>
+                </a></li>
                 <li><a href="../../index.html"><i class="fa-solid fa-arrow-right-from-bracket"></i>
                         <p>Sair</p>
                     </a></li>
