--- a/site/public/dashboard/html/home.html
+++ b/site/public/dashboard/html/home.html
@@ -20,20 +20,19 @@
                 <img src="../assets/home/logoClara.png" alt="" class="logo-img">
             </a>
             <ul class="nav-links">
-                <li><a href="home.html"><i class="fa-solid fa-house-user"></i><p>Visão Geral</p></a></li>
+                <li><a href="home.html" id="paginaAtual"><i class="fa-solid fa-house-user"></i><p>Visão Geral</p></a></li>
                 <li><a href="computadores.html"><i class="fa-solid fa-desktop"></i><p>Computadores</p></a></li>
                 <li><a href="usuarios.html"><i class="fa-solid fa-users"></i><p>Usuários</p></a></li>
                 <li><a href="analytics.html"><i class="fa-sharp fa-solid fa-chart-column"></i><p>Analytics</p></a></li>
+                <li><a href="https://app.pipefy.com/public/form/VUNJN1lE"><i class="fa-sharp fa-solid fa-headset"></i><p>Suporte</p></a></li>
                 <li><a href="../../index.html"><i class="fa-solid fa-arrow-right-from-bracket"></i><p>Sair</p></a></li>
                 <div class="active"></div>
             </ul>
-            <li class="suporte"><a href="https://app.pipefy.com/public/form/VUNJN1lE"><i class = ""></i><p>Suporte</p></a></li>
         </div>
     </section>
 
     <section class="right-side-window">
         <div class="container">
-
             <nav>
                 <div class="caixa destaque_caixa">
                     <h1>Visão Geral</h1>
