--- a/site/public/dashboard/html/computadores_reinicio.html
+++ b/site/public/dashboard/html/computadores_reinicio.html
@@ -17,10 +17,11 @@
             </a>
             <ul class="nav-links">
                 <li><a href="home.html"><i class="fa-solid fa-house-user"></i><p>Visão Geral</p></a></li>
-                <li><a href="computadores.html"><i class="fa-solid fa-desktop"></i><p>Computadores</p></a></li>
+                <li><a href="computadores.html"><i class="fa-solid fa-desktop"style="color: black"></i><p style="color: black">Computadores</p></a></li>
                 <li><a href="usuarios.html"><i class="fa-solid fa-users"></i><p>Usuários</p></a></li>
                 <li><a href="analytics.html"><i class="fa-sharp fa-solid fa-chart-column"></i><p>Analytics</p></a></li>
                 <li><a href="../../index.html"><i class="fa-solid fa-arrow-right-from-bracket"></i><p>Sair</p></a></li>
+                <div class="activee" style="display: block; margin-top: 34%;"></div>
                 <div class="active"></div>
             </ul>
             <li class="suporte"><a href="https://app.pipefy.com/public/form/VUNJN1lE"><i class = ""></i><p>Suporte</p></a></li>
