--- a/site/public/dashboard/html/computadores_gerenciar.html
+++ b/site/public/dashboard/html/computadores_gerenciar.html
@@ -21,6 +21,7 @@
                 <li><a href="usuarios.html"><i class="fa-solid fa-users"></i><p>Usuários</p></a></li>
                 <li><a href="analytics.html"><i class="fa-sharp fa-solid fa-chart-column"></i><p>Analytics</p></a></li>
                 <li><a href="../../index.html"><i class="fa-solid fa-arrow-right-from-bracket"></i><p>Sair</p></a></li>
+                <div class="activee" style="display: block;"></div>
                 <div class="active"></div>
             </ul>
             <li class="suporte"><a href="https://app.pipefy.com/public/form/VUNJN1lE"><i class = ""></i><p>Suporte</p></a></li>
