--- a/site/public/dashboard/html/home.html
+++ b/site/public/dashboard/html/home.html
@@ -20,12 +20,13 @@
                 <img src="../assets/home/logoClara.png" alt="" class="logo-img">
             </a>
             <ul class="nav-links">
-                <li><a href="home.html"><i class="fa-solid fa-house-user"></i><p>Visão Geral</p></a></li>
+                <li><a href="home.html"><i class="fa-solid fa-house-user" style="color: black"></i><p style="color: black">Visão Geral</p></a></li>
                 <li><a href="computadores.html"><i class="fa-solid fa-desktop"></i><p>Computadores</p></a></li>
                 <li><a href="usuarios.html"><i class="fa-solid fa-users"></i><p>Usuários</p></a></li>
                 <li><a href="analytics.html"><i class="fa-sharp fa-solid fa-chart-column"></i><p>Analytics</p></a></li>
                 <li><a href="../../index.html"><i class="fa-solid fa-arrow-right-from-bracket"></i><p>Sair</p></a></li>
-                <div class="active"></div>
+                <div class="activee" style="display: block;"></div>
+                <div class="active" style="display: block;"></div>
             </ul>
             <li class="suporte"><a href="https://app.pipefy.com/public/form/VUNJN1lE"><i class = ""></i><p>Suporte</p></a></li>
         </div>
