--- a/site/public/dashboard/html/analytics.html
+++ b/site/public/dashboard/html/analytics.html
@@ -47,13 +47,13 @@
                         <div class="kpi">
                             <div class="kpiContentTop">
                                 <img src="../assets/analytics/sem-wi-fi.png" alt="">
-                                <p id="pingText">Máquinas sem resposta de ping</p>
+                                <p id="pingText">Máquinas com ping vermelho por mais de 15 minutos</p>
                             </div>
                             <div class="kpiContentPorcen">
                                 <p>7%</p>
                             </div>
                             <div class="kpiContentTime">
-                                <p>+5 minutos</p>
+                                <p>+15 minutos</p>
                             </div>
                         </div>
 
@@ -64,7 +64,7 @@
                             </div>
 
                             <div class="kpiContentPorcen">
-                                <p>5%</p>
+                                <p id = reinicio>#</p>
                             </div>
                             <div class="kpiContentTime">
                                 <p>Últimos 7 dias</p>
@@ -96,7 +96,7 @@
                             </div>
 
                             <div class="kpiContentPorcen">
-                                <p>20%</p>
+                                <p id = "riscoPreenchimentoo">#</p>
                             </div>
                             <div class="kpiContentTime">
                                 <p> Próximos 7 dias</p>
