dash quase pronta

--- a/site/public/dashboard/html/analytics.html
+++ b/site/public/dashboard/html/analytics.html
@@ -47,13 +47,13 @@
                         <div class="kpi">
                             <div class="kpiContentTop">
                                 <img src="../assets/analytics/sem-wi-fi.png" alt="">
-                                <p id="pingText">Máquinas com ping vermelho por mais de 15 minutos</p>
+                                <p id="pingText">Média da latência dos computadores</p>
                             </div>
                             <div class="kpiContentPorcen">
-                                <p>7%</p>
+                                <p id="ping">#</p>
                             </div>
                             <div class="kpiContentTime">
-                                <p>+15 minutos</p>
+                                <p></p>
                             </div>
                         </div>
 
