--- a/site/public/dashboard/html/analytics.html
+++ b/site/public/dashboard/html/analytics.html
@@ -107,7 +107,7 @@
 
                 <div class="lineGrafic">
                     <div class="graficTitle">
-                        <h3>Percentual de computadores que foram reiniciados por dia, nos últimos 7 dias:</h3>
+                        <h3>Quantidade de computadores que foram reiniciados por dia, nos últimos 7 dias:</h3>
                     </div>
                     <div class="lineContainer">
                         <canvas id="lineChart"></canvas>
@@ -121,7 +121,7 @@
             <div class="bottomGrafics">
                 <div class="barGrafic">
                     <div class="graficTitle">
-                        <h3>Quantidade de alertas vermelhos por componente nos ultimos 30 dias</h3>
+                        <h3>Quantidade de alertas vermelhos por componente nos ultimos 30 dias:</h3>
                     </div>
                     <div class="barContainer">
                         <canvas id="barChart"></canvas>
@@ -130,7 +130,7 @@
 
                 <div class="pieGrafic">
                     <div class="graficTitle">
-                        <h3>Porcentagem de máquinas em cada status nos últimos 30 dias</h3>
+                        <h3>Porcentagem de máquinas em cada status nos últimos 30 dias:</h3>
                     </div>
                     <div class="pieContainer">
                         <canvas id="pieChart"></canvas>
