--- a/site/public/dashboard/html/computadorIndividual.html
+++ b/site/public/dashboard/html/computadorIndividual.html
@@ -96,15 +96,15 @@
                         <div class="containerLegenda">
                             <h4>REDE:</h4>
                             <div class="boxLegenda">
-                                <p>> <span id="vermRede"></span>ms</p>
+                                <p>>= <span id="vermRede"></span>ms</p>
                                 <img src="../assets/dashboard/vermelho.png" alt="">
                             </div>
                             <div class="boxLegenda">
-                                <p>> <span id="amarRede"></span>ms</p>
+                                <p>>= <span id="amarRede"></span>ms</p>
                                 <img src="../assets/dashboard/amarelo.png" alt="">
                             </div>
                             <div class="boxLegenda">
-                                <p><= <span id="verdeRede"></span>ms</p>
+                                <p>< <span id="verdeRede"></span>ms</p>
                                 <img src="../assets/dashboard/verde.png" alt="" id="verdeL">
                             </div>
                         </div>
@@ -114,15 +114,15 @@
                         <div class="containerLegenda">
                             <h4>RAM:</h4>
                             <div class="boxLegenda">
-                                <p>> <span id="vermRam"></span>%</p>
+                                <p>>= <span id="vermRam"></span>%</p>
                                 <img src="../assets/dashboard/vermelho.png" alt="">
                             </div>
                             <div class="boxLegenda">
-                                <p>> <span id="amarRam"></span>%</p>
+                                <p>>= <span id="amarRam"></span>%</p>
                                 <img src="../assets/dashboard/amarelo.png" alt="">
                             </div>
                             <div class="boxLegenda">
-                                <p><= <span id="verdeRam"></span>%</p>
+                                <p>< <span id="verdeRam"></span>%</p>
                                 <img src="../assets/dashboard/verde.png" alt="" id="verdeL">
                             </div>
                         </div>
@@ -167,15 +167,15 @@
                         <div class="containerLegenda">
                             <h4>CPU:</h4>
                             <div class="boxLegenda">
-                                <p>> <span id="vermCpu"></span>%</p>
+                                <p>>= <span id="vermCpu"></span>%</p>
                                 <img src="../assets/dashboard/vermelho.png" alt="">
                             </div>
                             <div class="boxLegenda">
-                                <p>> <span id="amarCpu"></span>%</p>
+                                <p>>= <span id="amarCpu"></span>%</p>
                                 <img src="../assets/dashboard/amarelo.png" alt="">
                             </div>
                             <div class="boxLegenda">
-                                <p><= <span id="verdeCpu"></span>%</p>
+                                <p>< <span id="verdeCpu"></span>%</p>
                                 <img src="../assets/dashboard/verde.png" alt="" id="verdeL">
                             </div>
                         </div>
@@ -185,15 +185,15 @@
                         <div class="containerLegenda">
                             <h4>DISCO:</h4>
                             <div class="boxLegenda">
-                                <p>> <span id="vermDisco"></span>%</p>
+                                <p>>= <span id="vermDisco"></span>%</p>
                                 <img src="../assets/dashboard/vermelho.png" alt="">
                             </div>
                             <div class="boxLegenda">
-                                <p>> <span id="amarDisco"></span>%</p>
+                                <p>>= <span id="amarDisco"></span>%</p>
                                 <img src="../assets/dashboard/amarelo.png" alt="">
                             </div>
                             <div class="boxLegenda">
-                                <p><= <span id="verdeDisco"></span>%</p>
+                                <p>< <span id="verdeDisco"></span>%</p>
                                 <img src="../assets/dashboard/verde.png" alt="" id="verdeL">
                             </div>
                         </div>
