--- a/site/public/dashboard/html/analytics.html
+++ b/site/public/dashboard/html/analytics.html
@@ -130,11 +130,10 @@
 
                 <div class="pieGrafic">
                     <div class="graficTitle">
-                        <h3>Porcentagem de máquinas em cada status nos últimos 30 dias:</h3>
+                        <h3>Setores com maior taxa de alertas vermelhos</h3>
                     </div>
                     <div class="pieContainer">
                         <canvas id="pieChart"></canvas>
-                        <h5><b style="color: aquamarine;">Operando: 80%</b>, <b style="color: yellow;"> Manutenção: 13%</b>, <b style="color: orangered;"> Inativa: 7%</b></H5>
                     </div>
                 </div>
             </div>
